Changes to application.properties

--- a/ElectricBillingREST/src/main/resources/application.properties
+++ b/ElectricBillingREST/src/main/resources/application.properties
@@ -3,3 +3,5 @@ spring.datasource.url=jdbc:mysql://localhost:3306/electricdb
 spring.datasource.username=electric
 spring.datasource.password=watt
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+
+spring.jmx.default-domain=ElectricBillingREST
